update auth completion
